Added interfaces for SGplan and FF, fixed LAMAinterface.